// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TeamSelectorModal should hide group constrained teams when excludeGroupConstrained is true 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="modal-open"
    style="padding-right: 0px;"
  >
    <div
      aria-hidden="true"
    />
    <div
      role="dialog"
    >
      <div
        class="fade modal-backdrop in"
      />
      <div
        aria-labelledby="teamSelectorModalLabel"
        class="fade in modal"
        role="dialog"
        style="display: block; padding-right: 0px;"
        tabindex="-1"
      >
        <div
          class="a11y__modal more-modal more-direct-channels team-selector-modal modal-dialog"
        >
          <div
            class="modal-content"
            role="document"
          >
            <div
              class="modal-header"
            >
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
                <span
                  class="sr-only"
                >
                  Close
                </span>
              </button>
              <h1
                class="modal-title"
                id="teamSelectorModalLabel"
              >
                <span>
                  Add Teams to 
                  <strong>
                    Team Selection
                  </strong>
                   List
                </span>
              </h1>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="filtered-user-list"
              >
                <div
                  class="filter-row filter-row--full"
                >
                  <div
                    class="multi-select__container react-select"
                  >
                    <div
                      class=" css-171qmui-SelectContainer"
                      id="selectItems"
                    >
                      <div
                        class="react-select-auto react-select__control css-yk16xz-control"
                      >
                        <div
                          class="react-select-auto react-select__value-container react-select-auto react-select__value-container--is-multi css-1hwfws3"
                        >
                          <div
                            class="react-select-auto react-select__placeholder css-1wa3eu0-placeholder"
                          >
                            Search and add teams
                          </div>
                          <div
                            class="css-b8ldur-Input"
                          >
                            <div
                              class="react-select-auto react-select__input"
                              style="display: inline-block;"
                            >
                              <input
                                aria-autocomplete="list"
                                aria-label="Search and add teams"
                                autocapitalize="none"
                                autocomplete="off"
                                autocorrect="off"
                                id="react-select-3-input"
                                spellcheck="false"
                                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                                tabindex="0"
                                type="text"
                                value=""
                              />
                              <div
                                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      class="save-button btn btn-primary"
                      data-testid="saveSetting"
                      id="saveItems"
                      type="submit"
                    >
                      <span>
                        Add
                      </span>
                    </button>
                  </div>
                  <div
                    class="multi-select__help"
                    id="multiSelectHelpMemberInfo"
                  >
                    Use ↑↓ to browse, ↵ to select.
                  </div>
                </div>
                <div
                  aria-live="polite"
                  class="multi-select__wrapper"
                >
                  <div
                    aria-hidden="true"
                  >
                    <div
                      class="loading-screen"
                      style="position: absolute;"
                    >
                      <div
                        class="loading__content"
                      >
                        <p>
                          Loading
                        </p>
                        <div
                          class="round round-1"
                        />
                        <div
                          class="round round-2"
                        />
                        <div
                          class="round round-3"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="multi-select__help"
                  id="multiSelectMessageNote"
                />
                <div
                  class="filter-controls"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components/TeamSelectorModal should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="modal-open"
    style="padding-right: 0px;"
  >
    <div
      aria-hidden="true"
    />
    <div
      role="dialog"
    >
      <div
        class="fade modal-backdrop in"
      />
      <div
        aria-labelledby="teamSelectorModalLabel"
        class="fade in modal"
        role="dialog"
        style="display: block; padding-right: 0px;"
        tabindex="-1"
      >
        <div
          class="a11y__modal more-modal more-direct-channels team-selector-modal modal-dialog"
        >
          <div
            class="modal-content"
            role="document"
          >
            <div
              class="modal-header"
            >
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
                <span
                  class="sr-only"
                >
                  Close
                </span>
              </button>
              <h1
                class="modal-title"
                id="teamSelectorModalLabel"
              >
                <span>
                  Add Teams to 
                  <strong>
                    Team Selection
                  </strong>
                   List
                </span>
              </h1>
            </div>
            <div
              class="modal-body"
            >
              <div
                class="filtered-user-list"
              >
                <div
                  class="filter-row filter-row--full"
                >
                  <div
                    class="multi-select__container react-select"
                  >
                    <div
                      class=" css-171qmui-SelectContainer"
                      id="selectItems"
                    >
                      <div
                        class="react-select-auto react-select__control css-yk16xz-control"
                      >
                        <div
                          class="react-select-auto react-select__value-container react-select-auto react-select__value-container--is-multi css-1hwfws3"
                        >
                          <div
                            class="react-select-auto react-select__placeholder css-1wa3eu0-placeholder"
                          >
                            Search and add teams
                          </div>
                          <div
                            class="css-b8ldur-Input"
                          >
                            <div
                              class="react-select-auto react-select__input"
                              style="display: inline-block;"
                            >
                              <input
                                aria-autocomplete="list"
                                aria-label="Search and add teams"
                                autocapitalize="none"
                                autocomplete="off"
                                autocorrect="off"
                                id="react-select-2-input"
                                spellcheck="false"
                                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                                tabindex="0"
                                type="text"
                                value=""
                              />
                              <div
                                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      class="save-button btn btn-primary"
                      data-testid="saveSetting"
                      id="saveItems"
                      type="submit"
                    >
                      <span>
                        Add
                      </span>
                    </button>
                  </div>
                  <div
                    class="multi-select__help"
                    id="multiSelectHelpMemberInfo"
                  >
                    Use ↑↓ to browse, ↵ to select.
                  </div>
                </div>
                <div
                  aria-live="polite"
                  class="multi-select__wrapper"
                >
                  <div
                    aria-hidden="true"
                  >
                    <div
                      class="loading-screen"
                      style="position: absolute;"
                    >
                      <div
                        class="loading__content"
                      >
                        <p>
                          Loading
                        </p>
                        <div
                          class="round round-1"
                        />
                        <div
                          class="round round-2"
                        />
                        <div
                          class="round round-3"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="multi-select__help"
                  id="multiSelectMessageNote"
                />
                <div
                  class="filter-controls"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
